# cmh

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  cmh-completion.bash  cmh.go
test/: CMakeLists.txt  README.md
test/include/sayhello/: sayhello.hpp
test/src/: sayhello.cpp
